--- a/index.css
+++ b/index.css
@@ -4,8 +4,20 @@
 .keyboard-row2 {
     margin-bottom: 8px;
     margin-left: 10px;
+    
 }
 .keyboard-row3 {
     margin-bottom: 8px;
     margin-left: 25px;
+    
 }
+.all-keyboard {
+    margin-left: 650px;  
+    margin-top: 200px;   
+}
+#player-gallow {
+    margin-left: 250px;
+    
+    
+}
+
