--- a/index.css
+++ b/index.css
@@ -1,24 +1,32 @@
 .keyboard-row1 {
     margin-bottom: 8px;
+    
 }
 .keyboard-row2 {
     margin-bottom: 8px;
     margin-left: 10px;
-    
+
 }
 .keyboard-row3 {
     margin-bottom: 8px;
-    margin-left: 25px;
+    margin-left: 0px;
     
 }
 .all-keyboard {
-    margin-left: 650px;  
-    margin-top: 200px;   
+   margin-top: 50px;
+   width: 100%;
+   text-align: center;
 }
-#player-gallow {
-    margin-left: 300px;
-   
-    
-    
+.gallow {
+    text-align: left;  
 }
 
+.char-btn {
+    width: 50px;
+    height: 50px;
+    font-size: larger;
+}
+
+#player-gallow {
+    margin-left: 200px;
+} 
